github strategy is se

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.11.12",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0"
   }
 }
