--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.15.4",
+    "node": "14.x",
     "npm": "6.14.10"
   },
   "scripts": {
