--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "engines": {
     "node": "14.x",
-    "npm": "6.14.10"
+    "npm": "6.x"
   },
   "scripts": {
     "start": "node index.js",
