--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^4.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
