--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.12",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
     "redux-thunk": "^2.3.0",
     "sendgrid": "^5.2.3",
     "stripe": "^8.134.0"
